user defined link colors, tweet view buttons, splash screen, about window

--- a/o3o/Properties/Settings.settings
+++ b/o3o/Properties/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="OAuth_AccessTokenSecret" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="use_system_color" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="system_color" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">0, 192, 192</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
