--- a/o3o/o3o.csproj
+++ b/o3o/o3o.csproj
@@ -40,6 +40,9 @@
     <ApplicationIcon>Images\new o3o icon allsize1.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CustomColorPicker">
+      <HintPath>..\..\Users\zahndy\Desktop\CustomColorPicker.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.0.3.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Libs\Newtonsoft.Json.dll</HintPath>
@@ -71,6 +74,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AboutBox1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutBox1.Designer.cs">
+      <DependentUpon>AboutBox1.cs</DependentUpon>
+    </Compile>
     <Compile Include="GetOAuthForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,7 +104,6 @@
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
     </Compile>
     <Page Include="notify.xaml">
       <SubType>Designer</SubType>
@@ -127,6 +135,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="AboutBox1.resx">
+      <DependentUpon>AboutBox1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GetOAuthForm.resx">
       <DependentUpon>GetOAuthForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -144,9 +155,17 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <SplashScreen Include="SplashScreen1.png" />
     <Resource Include="Libs\GettingStarted.txt" />
     <Resource Include="Libs\Json.NET.license.txt" />
     <Resource Include="Images\new o3o icon allsize1.ico" />
+    <Resource Include="Images\gear_icon.png" />
+    <Resource Include="Images\leftarrow.png" />
+    <Resource Include="Images\rightarrow.png" />
+    <Resource Include="Images\Reload_Hover.png" />
+    <Resource Include="Images\Reload_normal.png" />
+    <Resource Include="Images\leftarrow_over.png" />
+    <Resource Include="Images\rightarrow_over.png" />
     <Content Include="Libs\Newtonsoft.Json.dll" />
     <Content Include="Libs\Newtonsoft.Json.pdb" />
     <Resource Include="Libs\Newtonsoft.Json.xml" />
