reply buttons, context menus, small fixes

--- a/o3o/o3o.csproj
+++ b/o3o/o3o.csproj
@@ -159,13 +159,18 @@
     <Resource Include="Libs\GettingStarted.txt" />
     <Resource Include="Libs\Json.NET.license.txt" />
     <Resource Include="Images\new o3o icon allsize1.ico" />
-    <Resource Include="Images\gear_icon.png" />
     <Resource Include="Images\leftarrow.png" />
     <Resource Include="Images\rightarrow.png" />
     <Resource Include="Images\Reload_Hover.png" />
     <Resource Include="Images\Reload_normal.png" />
     <Resource Include="Images\leftarrow_over.png" />
     <Resource Include="Images\rightarrow_over.png" />
+    <Resource Include="Images\reply.png" />
+    <Resource Include="Images\reply_onclick.png" />
+    <Resource Include="Images\reply_onhover.png" />
+    <Resource Include="Images\reply_empty.png" />
+    <Resource Include="Images\gear.png" />
+    <Resource Include="Images\gear_selected.png" />
     <Content Include="Libs\Newtonsoft.Json.dll" />
     <Content Include="Libs\Newtonsoft.Json.pdb" />
     <Resource Include="Libs\Newtonsoft.Json.xml" />
