failed attempt at threading

--- a/o3o/o3o.csproj
+++ b/o3o/o3o.csproj
@@ -86,6 +86,7 @@
     <Compile Include="GetOAuthForm.Designer.cs">
       <DependentUpon>GetOAuthForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GetTweets.cs" />
     <Compile Include="glass.cs" />
     <Compile Include="TweetElement.xaml.cs">
       <DependentUpon>TweetElement.xaml</DependentUpon>
