--- a/o3o/o3o.csproj
+++ b/o3o/o3o.csproj
@@ -65,6 +65,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Libs\Twitterizer2.dll</HintPath>
     </Reference>
+    <Reference Include="Twitterizer2.Streaming, Version=2.4.0.2030, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Libs\Twitterizer2.Streaming.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
