Finished multi user support backend
Multi-user backend is done, now only a user configuration UI has to be
made.

--- a/o3o/o3o.csproj
+++ b/o3o/o3o.csproj
@@ -121,6 +121,7 @@
       <DependentUpon>GetOAuthForm.cs</DependentUpon>
     </Compile>
     <Compile Include="glass.cs" />
+    <Compile Include="Persistence.cs" />
     <Compile Include="TweetElement.xaml.cs">
       <DependentUpon>TweetElement.xaml</DependentUpon>
     </Compile>
