naitive retweets and broken images
added image for failing images and option in the menu for naitive
retweets

--- a/o3o/o3o.csproj
+++ b/o3o/o3o.csproj
@@ -197,6 +197,7 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\playback_play.png" />
+    <Resource Include="Images\image_Failed.png" />
     <Content Include="Sounds\Bleep.mp3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
