--- a/o3o/app.config
+++ b/o3o/app.config
@@ -13,6 +13,12 @@
             <setting name="system_color" serializeAs="String">
                 <value>0, 192, 192</value>
             </setting>
+            <setting name="Volume" serializeAs="String">
+                <value>20</value>
+            </setting>
+            <setting name="PolygonOpacity" serializeAs="String">
+                <value>0.4</value>
+            </setting>
         </o3o.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
