tweets are a var, fixes, textcolor, spellcheck.
the max amount of tweets visible is a Setting now, i fixed the spaces in
the retweets, textbox now closes after the tweet and i added spell
checking.

--- a/o3o/Properties/Settings.settings
+++ b/o3o/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="PolygonOpacity" Type="System.Single" Scope="User">
       <Value Profile="(Default)">0.4</Value>
     </Setting>
+    <Setting Name="amountOfTWeetsToDisplay" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">40</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
