--- a/o3o/app.config
+++ b/o3o/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -18,6 +18,9 @@
             </setting>
             <setting name="PolygonOpacity" serializeAs="String">
                 <value>0.4</value>
+            </setting>
+            <setting name="amountOfTWeetsToDisplay" serializeAs="String">
+                <value>40</value>
             </setting>
         </o3o.Properties.Settings>
     </userSettings>
