--- a/o3o/app.config
+++ b/o3o/app.config
@@ -22,6 +22,9 @@
             <setting name="amountOfTWeetsToDisplay" serializeAs="String">
                 <value>40</value>
             </setting>
+            <setting name="LastWindowPosition" serializeAs="String">
+                <value>100,100</value>
+            </setting>
         </o3o.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
