--- a/o3o/Properties/Settings.settings
+++ b/o3o/Properties/Settings.settings
@@ -20,5 +20,11 @@
     <Setting Name="LastWindowPosition" Type="System.Windows.Point" Scope="User">
       <Value Profile="(Default)">100,100</Value>
     </Setting>
+    <Setting Name="DisplayIndex" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="TopMostNotify" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
