--- a/o3o/app.config
+++ b/o3o/app.config
@@ -25,6 +25,12 @@
             <setting name="LastWindowPosition" serializeAs="String">
                 <value>100,100</value>
             </setting>
+            <setting name="DisplayIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="TopMostNotify" serializeAs="String">
+                <value>True</value>
+            </setting>
         </o3o.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
